--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Novo site git</title>
 </head>
 <body>
-
+	<main>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>Projetos</li>
+			</ul>
+		</nav>
+	</main>
 </body>
 </html>
