--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 				<li>Projetos</li>
 			</ul>
 		</nav>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<article>article</article>
+				</div>
+				<div class="col-md-4">
+					<aside>Aside</aside>
+				</div>
+			</div>
+		</div>
 	</main>
 </body>
 </html>
